--- a/style.css
+++ b/style.css
@@ -44,3 +44,10 @@
 .thumbnail-image-padding{
 	padding-bottom: 15px;
 }
+body {											
+    font: 20px "Montserrat", sans-serif;		/*Google Fonts*/
+    line-height: 1.8;
+    color: #f5f6f7;
+}
+
+p {font-size: 16px;}
